# azimuth-android

./: .gitignore  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  azimuth_ctx.h  rtklib_jni.c
app/src/main/cpp/rtklib-core/: AZIMUTH_VENDOR_NOTE.txt  CMakeLists.txt
app/src/main/java/day/azimuth/observer/: AzimuthApp.kt  MainActivity.kt
app/src/main/java/day/azimuth/observer/data/local/: AzimuthDatabase.kt  AzimuthPreferences.kt  CoverageTier.kt  EphemerisNtripConfig.kt  HexCoverage.kt  HexCoverageDao.kt  HexIndexer.kt  NtripConfig.kt  NtripStatus.kt  Observation.kt  ObservationDao.kt  ObservationRepository.kt
app/src/main/java/day/azimuth/observer/data/remote/: AzimuthApi.kt  HexFreshnessModels.kt  VersionInfo.kt
app/src/main/java/day/azimuth/observer/di/: AppModule.kt
app/src/main/java/day/azimuth/observer/service/: BootReceiver.kt  CollectionController.kt  CoverageBackfillWorker.kt  CoverageSyncWorker.kt  ObservationService.kt  UpdateChecker.kt  UploadWorker.kt
app/src/main/java/day/azimuth/observer/service/collectors/: CellInfoCollector.kt  GnssMeasurementCollector.kt  LocationProvider.kt  WiFiRttCollector.kt  WiFiSurveyCollector.kt
app/src/main/java/day/azimuth/observer/ui/: AzimuthNavHost.kt  AzimuthNavViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/resources/rtcm/: brandtfarms_120s.rtcm3
gradle/: libs.versions.toml
(+47 files in other folders)
